--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ h1, h2, h3 {
 	font-family: 'Rakkas', cursive;
 }
 
-aside {float: left; width: 30%; padding: 10px;
+aside {float: left;
 	
 }
 
@@ -31,15 +31,15 @@ img {
 	max-width: 75%;
 }
 
-main {float: left; width: 50%; padding: 10px;
+main {float: left;
 
 }
 
-nav {
-	float: left; width: 10%; padding: 10px;
+nav {float: left;
+
 }
 
-#copyright {width: 20%;
+#copyright {
 	font-size: 80%;
 }
 
